/*
Author: Florian Schwarzl
Date: 2021-03-10
*/

syntax = "proto3";

package distance_vector;

message SimpleMessage{
    string text = 1;
    int32 source = 2;
    int32 target = 3;
}

message VectorUpdate{
    message VectorEntry{
        int32 target = 1;
        int32 distance = 2;
    };

    repeated VectorEntry vector = 1;
}