/*
Author: Florian Schwarzl
Date: 2021-03-10
*/

syntax = "proto3";

package proto_messages;

message SimpleMessage{
    string text = 1;
}

message VectorUpdate{    
    message VectorEntry{
        int32 target = 1;
        int32 distance = 2;
    };

    repeated VectorEntry vector = 3;
}

message WrapperMessage{
    int32 target = 1;
    int32 source = 2;
    int32 prev_hop = 3;
    oneof contents{
        SimpleMessage text_message = 4;
        VectorUpdate update_message = 5;
    }
}